...
    "detail.payments" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Payments"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "还款记录"
...
            "value" : "Debt"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "债务"
          }
        }
      }
    },
    "field.dueDate" : {
      "extractionState" : "stale",
...
    },
    "settings.customRules" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Custom Calculation Rules"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "自定义计算规则"
...
            "value" : "Overview"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "总览"
          }
        }
      }
    },
    "statistics.category.paymentAnalysis" : {
      "extractionState" : "stale",
...
    },
    "tab.dashboard" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dashboard"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "总览"
...
    },
    "tab.debts" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Debts"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "债务"
...
            "value" : "Payments"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "流水"
          }
        }
      }
    },
    "tab.settings" : {
      "localizations" : {
...
    },
    "tab.statistics" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Statistics"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "统计"
          }
        }
      }
    },
    "tab.strategy" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Strategy"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "策略"
          }
        }
      }
    }
  },
  "version" : "1.0"
...
